# OpenGL-base-project

./: .gitignore  .local.nvimrc  CMakeLists.txt  readme.md
ressources/: checker.ppm  normal_map.ppm  wave_height_map.ppm  wave_normal_map.ppm
src/: camera.hpp  fs.glsl  imagePPM.cc  imagePPM.hpp  imgui_impl_glfw_gl3.cc  log.cc  log.hpp  main.cc  opengl_helpers.cc  opengl_helpers.hpp  plane.hpp  shader.cc  shader.hpp  sphere.hpp  utils.cc  utils.hpp  vs.glsl  window.cc  window.hpp
